--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Büdnis Feuerundflamme
+title: Bündnis Feuerundflamme
 email: kontakt@feuerundflamme.xyz
 lang: de
 description: >- # this means to ignore newlines until "baseurl:"
